# dotfiles

./: .gitignore  README.md  aliases.ps1  bootstrap.ps1  google-ime-config1.db  import-startup-items.ps1  install-git-extras-scoop.ps1  install-scoop.ps1  install.sh  mise.toml  profile.ps1  register-startup.ps1  setup.ps1  starship.toml  startup-apps.json  startup-manager.ps1  startup-popup.ps1  startup.vbs  vsc.bat  vsc.vbs
autohotkey/: discord.ahk  shortcuts.ahk
bash/: .bashrc  generated-aliases.sh
claude/: CLAUDE.md  keybindings.json  mcp-servers.json  settings.json  statusline.ps1  statusline.py  worktree-copy.list
cli/: Cargo.toml  build.rs  definitions.toml
cli/pdfview/: Cargo.toml
cli/pdfview/scripts/: setup-pdfium.ps1
cli/pdfview/src/: app.rs  cache.rs  error.rs  event.rs  input.rs  lib.rs  main.rs  pdf.rs  position.rs  prefetch.rs  render.rs  state.rs  terminal.rs
cli/src/: definitions.rs  main.rs  protocol.rs
cli/src/commands/: build.rs  c.rs  cas_admin.rs  cas_db.rs  cas_hash.rs  cas_post.rs  cb.rs  cg.rs  check_dirty.rs  cursor.rs  dup_scan.rs  dup_scan_format.rs  frun.rs  git_prompt.rs  grf.rs  literal_dup.rs  literal_dup_format.rs  locked.rs  mod.rs  notify.rs  proxy.rs  resume.rs  send_key.rs  string_dup.rs  string_dup_format.rs  sync.rs  titles.rs  token_audit.rs  token_audit_format.rs  token_audit_hook.rs  y.rs  zf.rs
cli/src/commands/migrations/: 001_initial.sql
cli/src/generate/: bash.rs  mod.rs  nushell.rs  powershell.rs
git/: .gitconfig  gitattributes
install/: bw-secrets.ps1  bw-upload-ssh-key.ps1  claude-code.ps1  disable-msime.ps1  fonts.ps1  git-extras.ps1  google-ime.ps1  install-order.json  scoop.ps1  scoopfile.json  skills.json  sync-external-skills.ps1  sync-skills.ps1  tools.json  tools.ps1  uv-tools.json  uv-tools.ps1  webinstall.json  webinstall.ps1  winget.ps1  wingetfile.json  wsl.ps1
lazygit/: README.md  config.yml
nushell/: config.nu  env.nu  generate-cache.nu  history.txt  measure-startup.nu  run-task.nu
nvim/: README.md  init.lua  lazy-lock.json
pwsh/: aliases.ps1  profile.ps1  sync.ps1
settings/: vscode.json
ssh/: config
startup/: manager.ps1  popup.ps1  register.ps1
tests/: test-bootstrap-flow.ps1  test-scoop-aliases.ps1
vivaldi/: apply-search-engines.ps1  ark-like-tabs.css
vscode/: keybindings.json
wezterm/: README.md  keybinds.lua  wezterm.lua
yazi/: README.md  package.toml  yazi.toml
(+94 files in other folders)
