[package]
name = "dotcli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
rayon = "1"
ureq = { version = "3", features = ["json"] }
gix = { version = "0.81", default-features = false, features = ["status", "revision", "sha1"] }
