[workspace]
members = [".", "pdfview"]
resolver = "2"

[package]
name = "dotcli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
rayon = "1"
ureq = { version = "3", features = ["json"] }
gix = { version = "0.81", default-features = false, features = ["status", "revision", "sha1"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
