[package]
name = "pdfview"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdfview"
path = "src/lib.rs"

[[bin]]
name = "pdfview"
path = "src/main.rs"

[dependencies]
pdfium-render = { version = "0.9", features = ["image_025", "thread_safe"] }
image = { version = "0.25", default-features = false, features = ["png"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-util", "io-std"] }
tokio-util = "0.7"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"
